2nd commit of Tickets project
Signed-off-by: kirtananushka <kir.tananushka@gmail.com>

--- a/src/main/resources/bundle/pagecontent.properties
+++ b/src/main/resources/bundle/pagecontent.properties
@@ -14,6 +14,7 @@ name=Name
 surname=Surname
 phone=Phone number
 email=E-mail
+email.email=Email
 login.expl=5-15 characters (English letters and numbers; first character must be a letter).
 password.expl=8-20 characters (English letters and numbers).
 name.expl=1-255 characters (Russian and English letters, spaces, hyphens).
@@ -100,4 +101,11 @@ genre.edit.text=Choose the genre to edit:
 cinema.restore.text=Choose the name of the cinema to be restored:
 genre.create.text=Enter the name of the genre (up to 255 characters):
 form.next=Next
+clients=Clients
+clients.active=Active clients
+client.id=ID
+verified=Verified
+active=Active
+registration.date=Registration date
+registration.date.short=Registration
 
