--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -12,6 +12,8 @@
         <welcome-file>index.jsp</welcome-file>
     </welcome-file-list>
 
+    <!--    error-->
+
     <error-page>
         <error-code>404</error-code>
         <location>/jsp/error/error404.jsp</location>
@@ -24,6 +26,8 @@
         <exception-type>java.lang.Throwable</exception-type>
         <location>/jsp/error/error.jsp</location>
     </error-page>
+
+    <!--    common-->
 
     <servlet>
         <servlet-name>Main page</servlet-name>
@@ -88,27 +92,22 @@
         <url-pattern>/confirmation_successful</url-pattern>
     </servlet-mapping>
 
-    <servlet>
-        <servlet-name>FilmEdit page</servlet-name>
-        <jsp-file>/jsp/user/manager/edit_film.jsp</jsp-file>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>FilmEdit page</servlet-name>
-        <url-pattern>/film_edit</url-pattern>
-    </servlet-mapping>
+
+    <!--show-->
+
 
     <servlet>
-        <servlet-name>FilmUpdated page</servlet-name>
-        <jsp-file>/jsp/user/manager/view_film_updated.jsp</jsp-file>
+        <servlet-name>ShowCreate page</servlet-name>
+        <jsp-file>/jsp/user/show/create_show.jsp</jsp-file>
     </servlet>
     <servlet-mapping>
-        <servlet-name>FilmUpdated page</servlet-name>
-        <url-pattern>/film_updated</url-pattern>
+        <servlet-name>ShowCreate page</servlet-name>
+        <url-pattern>/show_create</url-pattern>
     </servlet-mapping>
 
     <servlet>
         <servlet-name>ShowEdit page</servlet-name>
-        <jsp-file>/jsp/user/manager/edit_show.jsp</jsp-file>
+        <jsp-file>/jsp/user/show/edit_show.jsp</jsp-file>
     </servlet>
     <servlet-mapping>
         <servlet-name>ShowEdit page</servlet-name>
@@ -117,7 +116,7 @@
 
     <servlet>
         <servlet-name>ShowUpdated page</servlet-name>
-        <jsp-file>/jsp/user/manager/view_show_updated.jsp</jsp-file>
+        <jsp-file>/jsp/user/show/view_show_updated.jsp</jsp-file>
     </servlet>
     <servlet-mapping>
         <servlet-name>ShowUpdated page</servlet-name>
@@ -125,44 +124,38 @@
     </servlet-mapping>
 
     <servlet>
-        <servlet-name>DeleteFilm page</servlet-name>
-        <jsp-file>/jsp/user/manager/delete_film.jsp</jsp-file>
+        <servlet-name>ShowDelete page</servlet-name>
+        <jsp-file>/jsp/user/show/delete_show.jsp</jsp-file>
     </servlet>
     <servlet-mapping>
-        <servlet-name>DeleteFilm page</servlet-name>
-        <url-pattern>/delete_film</url-pattern>
-    </servlet-mapping>
-
-    <servlet>
-        <servlet-name>DeleteShow page</servlet-name>
-        <jsp-file>/jsp/user/manager/delete_show.jsp</jsp-file>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>DeleteShow page</servlet-name>
+        <servlet-name>ShowDelete page</servlet-name>
         <url-pattern>/delete_show</url-pattern>
     </servlet-mapping>
 
+
+    <!--    film-->
+
     <servlet>
-        <servlet-name>DeletionSuccessful page</servlet-name>
-        <jsp-file>/jsp/user/manager/deletion_successful.jsp</jsp-file>
+        <servlet-name>FilmEdit page</servlet-name>
+        <jsp-file>/jsp/user/film/edit_film.jsp</jsp-file>
     </servlet>
     <servlet-mapping>
-        <servlet-name>DeletionSuccessful page</servlet-name>
-        <url-pattern>/deletion_successful</url-pattern>
+        <servlet-name>FilmEdit page</servlet-name>
+        <url-pattern>/film_edit</url-pattern>
     </servlet-mapping>
 
     <servlet>
-        <servlet-name>RestorationSuccessful page</servlet-name>
-        <jsp-file>/jsp/user/manager/restoration_successful.jsp</jsp-file>
+        <servlet-name>FilmUpdated page</servlet-name>
+        <jsp-file>/jsp/user/film/view_film_updated.jsp</jsp-file>
     </servlet>
     <servlet-mapping>
-        <servlet-name>RestorationSuccessful page</servlet-name>
-        <url-pattern>/restoration_successful</url-pattern>
+        <servlet-name>FilmUpdated page</servlet-name>
+        <url-pattern>/film_updated</url-pattern>
     </servlet-mapping>
 
     <servlet>
         <servlet-name>FilmCreate page</servlet-name>
-        <jsp-file>/jsp/user/manager/create_film.jsp</jsp-file>
+        <jsp-file>/jsp/user/film/create_film.jsp</jsp-file>
     </servlet>
     <servlet-mapping>
         <servlet-name>FilmCreate page</servlet-name>
@@ -170,17 +163,19 @@
     </servlet-mapping>
 
     <servlet>
-        <servlet-name>ShowCreate page</servlet-name>
-        <jsp-file>/jsp/user/manager/create_show.jsp</jsp-file>
+        <servlet-name>DeleteFilm page</servlet-name>
+        <jsp-file>/jsp/user/film/delete_film.jsp</jsp-file>
     </servlet>
     <servlet-mapping>
-        <servlet-name>ShowCreate page</servlet-name>
-        <url-pattern>/show_create</url-pattern>
+        <servlet-name>DeleteFilm page</servlet-name>
+        <url-pattern>/delete_film</url-pattern>
     </servlet-mapping>
+
+    <!--    cinema-->
 
     <servlet>
         <servlet-name>CinemaCreate page</servlet-name>
-        <jsp-file>/jsp/user/manager/create_cinema.jsp</jsp-file>
+        <jsp-file>/jsp/user/cinema/create_cinema.jsp</jsp-file>
     </servlet>
     <servlet-mapping>
         <servlet-name>CinemaCreate page</servlet-name>
@@ -189,7 +184,7 @@
 
     <servlet>
         <servlet-name>CinemaEdit page</servlet-name>
-        <jsp-file>/jsp/user/manager/edit_cinema.jsp</jsp-file>
+        <jsp-file>/jsp/user/cinema/edit_cinema.jsp</jsp-file>
     </servlet>
     <servlet-mapping>
         <servlet-name>CinemaEdit page</servlet-name>
@@ -198,7 +193,7 @@
 
     <servlet>
         <servlet-name>CinemaUpdate page</servlet-name>
-        <jsp-file>/jsp/user/manager/update_cinema.jsp</jsp-file>
+        <jsp-file>/jsp/user/cinema/update_cinema.jsp</jsp-file>
     </servlet>
     <servlet-mapping>
         <servlet-name>CinemaUpdate page</servlet-name>
@@ -207,7 +202,7 @@
 
     <servlet>
         <servlet-name>CinemaDelete page</servlet-name>
-        <jsp-file>/jsp/user/manager/delete_cinema.jsp</jsp-file>
+        <jsp-file>/jsp/user/cinema/delete_cinema.jsp</jsp-file>
     </servlet>
     <servlet-mapping>
         <servlet-name>CinemaDelete page</servlet-name>
@@ -216,16 +211,18 @@
 
     <servlet>
         <servlet-name>CinemaRestore page</servlet-name>
-        <jsp-file>/jsp/user/manager/restore_cinema.jsp</jsp-file>
+        <jsp-file>/jsp/user/cinema/restore_cinema.jsp</jsp-file>
     </servlet>
     <servlet-mapping>
         <servlet-name>CinemaRestore page</servlet-name>
         <url-pattern>/cinema_restore</url-pattern>
     </servlet-mapping>
 
+    <!--    genre-->
+
     <servlet>
         <servlet-name>GenreCreate page</servlet-name>
-        <jsp-file>/jsp/user/manager/create_genre.jsp</jsp-file>
+        <jsp-file>/jsp/user/genre/create_genre.jsp</jsp-file>
     </servlet>
     <servlet-mapping>
         <servlet-name>GenreCreate page</servlet-name>
@@ -234,7 +231,7 @@
 
     <servlet>
         <servlet-name>GenreEdit page</servlet-name>
-        <jsp-file>/jsp/user/manager/edit_genre.jsp</jsp-file>
+        <jsp-file>/jsp/user/genre/edit_genre.jsp</jsp-file>
     </servlet>
     <servlet-mapping>
         <servlet-name>GenreEdit page</servlet-name>
@@ -243,16 +240,18 @@
 
     <servlet>
         <servlet-name>GenreUpdate page</servlet-name>
-        <jsp-file>/jsp/user/manager/update_genre.jsp</jsp-file>
+        <jsp-file>/jsp/user/genre/update_genre.jsp</jsp-file>
     </servlet>
     <servlet-mapping>
         <servlet-name>GenreUpdate page</servlet-name>
         <url-pattern>/genre_update</url-pattern>
     </servlet-mapping>
 
+    <!--    operation-->
+
     <servlet>
         <servlet-name>CreationSuccessful page</servlet-name>
-        <jsp-file>/jsp/user/manager/creation_successful.jsp</jsp-file>
+        <jsp-file>/jsp/user/operation/creation_successful.jsp</jsp-file>
     </servlet>
     <servlet-mapping>
         <servlet-name>CreationSuccessful page</servlet-name>
@@ -261,12 +260,40 @@
 
     <servlet>
         <servlet-name>UpdatingSuccessful page</servlet-name>
-        <jsp-file>/jsp/user/manager/updating_successful.jsp</jsp-file>
+        <jsp-file>/jsp/user/operation/updating_successful.jsp</jsp-file>
     </servlet>
     <servlet-mapping>
         <servlet-name>UpdatingSuccessful page</servlet-name>
         <url-pattern>/updating_successful</url-pattern>
     </servlet-mapping>
 
+    <servlet>
+        <servlet-name>RestorationSuccessful page</servlet-name>
+        <jsp-file>/jsp/user/operation/restoration_successful.jsp</jsp-file>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>RestorationSuccessful page</servlet-name>
+        <url-pattern>/restoration_successful</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>DeletionSuccessful page</servlet-name>
+        <jsp-file>/jsp/user/operation/deletion_successful.jsp</jsp-file>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>DeletionSuccessful page</servlet-name>
+        <url-pattern>/deletion_successful</url-pattern>
+    </servlet-mapping>
+
+    <!--    clients-->
+
+    <servlet>
+        <servlet-name>Clients page</servlet-name>
+        <jsp-file>/jsp/user/client/clients.jsp</jsp-file>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>Clients page</servlet-name>
+        <url-pattern>/clients</url-pattern>
+    </servlet-mapping>
 
 </web-app>
