3d commit of Tickets project
Signed-off-by: kirtananushka <kir.tananushka@gmail.com>

--- a/src/main/resources/bundle/pagecontent.properties
+++ b/src/main/resources/bundle/pagecontent.properties
@@ -58,6 +58,7 @@ form.button.search=Search
 shows=Film shows
 shows.text=Pick a film by date and cinema.
 shows.cinema=Cinema
+shows.cinemas=Cinemas
 shows.menu=Shows
 shows.date=Date
 shows.free.places=Free places
@@ -103,9 +104,15 @@ genre.create.text=Enter the name of the genre (up to 255 characters):
 form.next=Next
 clients=Clients
 clients.active=Active clients
+clients.all=All clients
 client.id=ID
+managers=Managers
+managers.active=Active managers
+managers.all=All managers
+manager.id=ID
 verified=Verified
 active=Active
 registration.date=Registration date
 registration.date.short=Registration
+user.role=Role
 
