4th commit of Tickets project
Signed-off-by: kirtananushka <kir.tananushka@gmail.com>

--- a/src/main/resources/bundle/err.properties
+++ b/src/main/resources/bundle/err.properties
@@ -38,5 +38,7 @@ cinema.not.exists=Cinema with this name does not exist!
 genre.exists=Genre with the same name already exists
 cinema.updating.failed=Cinema updating failed
 genre.updating.failed=Genre updating failed
+invalid.role=Invalid role
+appointment.failed=Manager appointment failed
 
 
