--- a/src/main/resources/bundle/pagecontent.properties
+++ b/src/main/resources/bundle/pagecontent.properties
@@ -30,7 +30,7 @@ form.button.check=Check
 form.button.reset=Reset
 form.login.exists=Login already exists!
 registration.text=To confirm your account, browse the inbox for the mail you used when registering on our website. The account confirmation email contains a link to verify the email address. Follow the link to confirm the registration of your account.
-registration.success=Registration completed successfully.
+registration.success=Registration completed successfully
 confirmation.text=Account successfully confirmed.
 access.denied.title=Access is denied!
 access.denied.text=You do not have permission to view this page.
@@ -105,7 +105,10 @@ form.next=Next
 clients=Clients
 clients.active=Active clients
 clients.all=All clients
+users.all=All users
+users=Users
 client.id=ID
+user.id=ID
 managers=Managers
 managers.active=Active managers
 managers.all=All managers
@@ -115,4 +118,5 @@ active=Active
 registration.date=Registration date
 registration.date.short=Registration
 user.role=Role
+appoint.manager=Appoint manager
 
