--- a/src/main/resources/email/email.properties
+++ b/src/main/resources/email/email.properties
@@ -10,10 +10,9 @@ mail.confirmation.subject=Confirmation message
 mail.confirmation.text1=Hello, %s %s!<br>
 mail.confirmation.text2=Thank you for registering on our website.<br>
 mail.confirmation.text3=Your login: %s.<br>
-mail.confirmation.text4=Your password: %s.<br>
-mail.confirmation.text5=To activate your account, follow \
+mail.confirmation.text4=To activate your account, follow \
   <a href='http://localhost:8080/controller\
-  ?command=email_confirmation&userId=%d'>this link</a>.
+  ?command=email_confirmation&id=%d'>this link</a>.
 mail.message.subject=New message
 mail.msg.text1=A new message was sent from %s %s.<br>
 mail.msg.text2=Email: %s.<br>Phone: %s.<br>
