5th commit of Tickets project
Signed-off-by: kirtananushka <kir.tananushka@gmail.com>

--- a/src/main/resources/bundle/err.properties
+++ b/src/main/resources/bundle/err.properties
@@ -40,5 +40,6 @@ cinema.updating.failed=Cinema updating failed
 genre.updating.failed=Genre updating failed
 invalid.role=Invalid role
 appointment.failed=Manager appointment failed
+incorrect.data=Incorrect data!
 
 
