--- a/src/main/resources/email/email.properties
+++ b/src/main/resources/email/email.properties
@@ -17,3 +17,6 @@ mail.message.subject=New message
 mail.msg.text1=A new message was sent from %s %s.<br>
 mail.msg.text2=Email: %s.<br>Phone: %s.<br>
 mail.msg.text3=Message:<br>%s
+mail.newpassword.subject=New password
+mail.newpassword.text=Hello, your new password is <b>%s</b>.<br> \
+  You can change it later in your personal cabinet.
