--- a/src/main/resources/bundle/pagecontent.properties
+++ b/src/main/resources/bundle/pagecontent.properties
@@ -119,4 +119,8 @@ registration.date=Registration date
 registration.date.short=Registration
 user.role=Role
 appoint.manager=Appoint manager
-
+password.changed.title=Password was changed
+password.changed.text=The new password was sent to the email address that you provided during registration. You can change the password in your account.
+access.restoration=Restoration of access to the site
+access.restoration.text=Enter the login and email, specified during registration
+forgot.password=I forgot password
